# ai-development-terminal-max

./: CLAUDE.md  README.ja.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: landing-page-spec.md
src/: agent.ts  app.ts  git.ts  guard.ts  i18n.ts  main.ts  persistence.ts  project.ts  projects-controller.ts  pty.ts  render.ts  styles.css  subagent.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs  pty.rs  subagent.rs  sys.rs
