[package]
name = "ai-dev-terminal"
version = "0.1.0"
description = "AI Development Terminal MAX - parallel Claude Code multiplexer"
authors = ["foresthill"]
license = "MIT"
edition = "2021"

[lib]
name = "ai_dev_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
sysinfo = "0.33"
